--- a/Wk2/jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/Wk2/jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -1014,7 +1014,6 @@
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
-       "            <th>Date</th>\n",
        "            <th>Month</th>\n",
        "            <th>Landing_Outcome</th>\n",
        "            <th>Booster_Version</th>\n",
@@ -1023,35 +1022,68 @@
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>2015-01-10</td>\n",
        "            <td>January</td>\n",
        "            <td>Failure (drone ship)</td>\n",
        "            <td>F9 v1.1 B1012</td>\n",
        "            <td>CCAFS LC-40</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2015-04-14</td>\n",
+       "            <td>February</td>\n",
+       "            <td>Controlled (ocean)</td>\n",
+       "            <td>F9 v1.1 B1013</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>March</td>\n",
+       "            <td>No attempt</td>\n",
+       "            <td>F9 v1.1 B1014</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
        "            <td>April</td>\n",
        "            <td>Failure (drone ship)</td>\n",
        "            <td>F9 v1.1 B1015</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>April</td>\n",
+       "            <td>No attempt</td>\n",
+       "            <td>F9 v1.1 B1016</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>June</td>\n",
+       "            <td>Precluded (drone ship)</td>\n",
+       "            <td>F9 v1.1 B1018</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>December</td>\n",
+       "            <td>Success (ground pad)</td>\n",
+       "            <td>F9 FT B1019</td>\n",
        "            <td>CCAFS LC-40</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('2015-01-10', 'January', 'Failure (drone ship)', 'F9 v1.1 B1012', 'CCAFS LC-40'),\n",
-       " ('2015-04-14', 'April', 'Failure (drone ship)', 'F9 v1.1 B1015', 'CCAFS LC-40')]"
+       "[('January', 'Failure (drone ship)', 'F9 v1.1 B1012', 'CCAFS LC-40'),\n",
+       " ('February', 'Controlled (ocean)', 'F9 v1.1 B1013', 'CCAFS LC-40'),\n",
+       " ('March', 'No attempt', 'F9 v1.1 B1014', 'CCAFS LC-40'),\n",
+       " ('April', 'Failure (drone ship)', 'F9 v1.1 B1015', 'CCAFS LC-40'),\n",
+       " ('April', 'No attempt', 'F9 v1.1 B1016', 'CCAFS LC-40'),\n",
+       " ('June', 'Precluded (drone ship)', 'F9 v1.1 B1018', 'CCAFS LC-40'),\n",
+       " ('December', 'Success (ground pad)', 'F9 FT B1019', 'CCAFS LC-40')]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "select Date,\n",
+    "select \n",
     "    case\n",
     "        when substr(Date, 6,2) = '01' then 'January'\n",
     "        when substr(Date, 6,2) = '02' then 'February'\n",
@@ -1067,7 +1099,7 @@
     "        when substr(Date, 6,2) = '12' then 'December'\n",
     "    end as Month,\n",
     "    \"Landing_Outcome\", \"Booster_Version\", \"Launch_Site\" from SPACEXTABLE\n",
-    "    where substr(Date,0,5)='2015' and \"Landing_Outcome\" = \"Failure (drone ship)\";"
+    "    where substr(Date,0,5)='2015';"
    ]
   },
   {
